edition = "2023";  // successor to proto2 and proto3

package storage;

import "google/protobuf/timestamp.proto";
import "google/protobuf/go_features.proto";

option go_package = "./storage;storage";
option java_package = "io.stackrox.proto.storage";
option features.(pb.go).api_level = API_OPAQUE;

message Version {
  // This is a strictly incrementing integer describing the DB version.
  int32 seq_num = 1; // @gotags: search:"Current Sequence Number"
  // Associated version metadata. (For example, the corresponding product version.)
  string version = 2; // @gotags: search:"Version"
  // Last time version was updated
  google.protobuf.Timestamp last_persisted = 3; // @gotags: search:"Last Persisted"
  // The minimum sequence number supported by this iteration of the database.  Rollbacks
  // to versions prior to this sequence number are not supported.
  int32 min_seq_num = 4; // @gotags: search:"Minimum Sequence Number"
}
